sourceCompatibility = 17
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = ["src/main/"]
sourceSets.test.java.srcDirs = ["src/test/"]

eclipse.project.name = appName + "-core"

repositories {
    mavenCentral()

    repositories {
        maven {
            url "https://frcmaven.wpi.edu/artifactory/release/"
        }
    }
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}


dependencies {
    implementation group: 'org.ejml', name: 'ejml-all', version: '0.41'
    implementation 'org.jetbrains:annotations:23.0.0'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.5.1'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    implementation 'com.google.guava:guava:31.1-jre'

    api "com.fasterxml.jackson.core:jackson-annotations:2.10.0"
    api "com.fasterxml.jackson.core:jackson-core:2.10.0"
    api "com.fasterxml.jackson.core:jackson-databind:2.10.0"

    // Add ntcore-java
    implementation "edu.wpi.first.ntcore:ntcore-java:2021.3.1"

    // Add wpiutil-java
    implementation "edu.wpi.first.wpiutil:wpiutil-java:2021.3.1"

    // Add ntcore-jni for runtime. We are adding all supported platforms
    // so that our application will work on all supported platforms.
    runtimeOnly "edu.wpi.first.ntcore:ntcore-jni:2021.3.1:windowsx86"
    runtimeOnly "edu.wpi.first.ntcore:ntcore-jni:2021.3.1:windowsx86-64"
    runtimeOnly "edu.wpi.first.ntcore:ntcore-jni:2021.3.1:linuxx86-64"
    runtimeOnly "edu.wpi.first.ntcore:ntcore-jni:2021.3.1:linuxraspbian"
    runtimeOnly "edu.wpi.first.ntcore:ntcore-jni:2021.3.1:osxx86-64"

    implementation "space.earlygrey:shapedrawer:$shapedrawerVersion"

}
